# parse_site_jleague

./: .gitignore  README.md  app_logger.py  bot.py  data.py  giga.py  log.py  main.py  parse_4score.py  parse_jleague.py  pyproject.toml
.github/workflows/: blank.yml
Example/: Watch match Kawasaki Frontale vs Kyoto Sanga F.C. _ Matchweek 32, MEIJI YASUDA J1 LEAGUE 2023 _ J.LEAGUE.html  main.html
Example/Watch match Kawasaki Frontale vs Kyoto Sanga F.C. _ Matchweek 32, MEIJI YASUDA J1 LEAGUE 2023 _ J.LEAGUE_files/: 455981582.html  js  main.91df50637c03.js.Без названия  match-details-page.dbbc6937c843.js.Без названия  match-details-page.dea0355ded53.css  sidebar.7b7ae507396f.js.Без названия  vendor.b193ba64b4bb.css
Example/Welcome to the J.LEAGUE _ Official International Website of Japan Professional Football League._files/: 455981582.html  gtm.js.Без названия  homepage.2cec72095d66.js.Без названия  homepage.eaae21267132.css  main.ee3dd335f621.css  sidebar.07b117063772.css  vendor.191e1061d252.js.Без названия
FAV/: hash.py
app/: JLparser.py  app_logger.py  data.py  main.py  parse_4score.py  parse_jleague.py
app/bot/: bot_1.py  bot_2.py  main_bot.py
app/config/: app_logger.py
app/db/: data.py
app/parser/: parse_4score.py  parse_jleague.py
