[tool.poetry]
name = "dima-proj"
version = "0.1.0"
description = ""
authors = ["Андрей Кагадий <kagadi.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"
pyppeteer = "^1.0.2"
gigachat = "^0.1.8"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
