[tool.poetry]
name = "parse-site-jleague"
version = "0.1.0"
description = ""
authors = ["Andrey Kagadi <kagadi.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seleniumbase = "^4.21.4"
python-dotenv = "^1.0.0"
pytelegrambotapi = "^4.14.0"
nuitka = "^1.8.6"
imageio = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
